--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,117 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="firstB">
+  <div class="navigation">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">hey</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#work">My Work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/">
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="quote">
+    <p>Hey ! I'm Elise
+      <br>I build websites</p>
+  </div>
+
+  <div class="look">
+    <p>
+      <a href="#work"> Look what I've done
+        <br>
+        <br>
+        <i class="arrow down"></i>
+    </p>
+    </a>
+
+  </div>
+
+</div>
+
+
+
+<div class="secondB">
+
+  <h5>
+    <a id="work">My work</a>
+  </h5>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="../public/images/pro.jpg">
+          <div class="card-body">
+            <h5 class="card-title">Snake Game</h5>
+            <p class="card-text">This is the 1st project due after 2 weeks coding.</p>
+            <a href="https://elisegriset92.github.io/ironhack-project1/
+" class="btn btn-success">See website</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="../public/images/pro2.jpg">
+          <div class="card-body">
+            <h5 class="card-title">What the Q</h5>
+            <p class="card-text">This is the 2nd project due after 1 month coding.</p>
+            <a href="http://what-the-q.herokuapp.com" class="btn btn-success">See website</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="public/images/pro3.jpg">
+          <div class="card-body">
+            <h5 class="card-title">Ask Billise</h5>
+            <p class="card-text">This is the last project of my 9 weeks coding bootcamp.</p>
+            <a href="http://ask-billise.co" class="btn btn-success">See website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="thirdB">
+    <h5>
+      <a id="about">About me</a>
+    </h5>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img src="../public/images/elise.jpeg" width="100px"> </div>
+
+
+
+        <div class="col-sm">
+          <h5>Currently looking for a job</h5>
+          <p>I wish to work as a <b>web developer</B> because it’s a dynamic and innovative position where I can improve myself day
+            after day. 
+            <br>I need a job that fits me, where I can grow every day. It has to be stimulating, challenging and exciting
+            so I will never get bored. 
+            When I dive into a new task, I’m entirely in and nothing can stop me ! 
+            <br>
+            <br>I used to work in event planning for a Parisian agency for 3 years. Mostly organizing corporate events such as meetings from
+            10 to 1000 people. If you’ve ever been to a seminar, then you know that it’s often connected to a huge party
+            and/or a super fun incentive activity generally in beautiful venues and gorgeous destinations (this part was
+            -obviously- the best of the job!) 
+            
+            <div class="quo"><h5>Above all : creativity, innovation, originality and fun are the values I look for in a job</h5></div>
+           <div class="centerbtn"> <button class="btn btn-success">Find my resume</button> <button class="btn btn-success">Contact me</button></div>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
