--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -136,22 +136,17 @@ i {
   height: 50vh;
   padding-left: 10vh;
   padding-top: 10vh;
+  
   text-align:justify;
 }
 
+
 .thirdB .btn-success {
   display: inline-block;
-  margin: 5vh 5vh
+  margin: 5vh 5vh;
 }
 
 .centerbtn{
   text-align: center;
 }
 
-.quo{
-  transition: transform .2s;
-
-}
-.quo:hover {
-transform: bold;
-}
