--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div></div>
 
 
 
@@ -109,7 +109,7 @@
             -obviously- the best of the job!) 
             
             <div class="quo"><h5>Above all : creativity, innovation, originality and fun are the values I look for in a job</h5></div>
-           <div class="centerbtn"> <button class="btn btn-success">Find my resume</button> <button class="btn btn-success">Contact me</button></div>
+           <div class="centerbtn"> <a href="/resume"><button class="btn btn-success">Find my resume</button> </a><a href="mailto:elise.griset@gmail.com"><button class="btn btn-success">Contact me</button></a></div>
           </p>
         </div>
       </div>
