--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
   <div class="navigation">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">hey</a>
+        <a class="nav-link" href="#">hey</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#work">My Work</a>
@@ -11,9 +11,13 @@
         <a class="nav-link" href="#about">About</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#skills">Skills</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/">
         </a>
       </li>
+
     </ul>
   </div>
 
@@ -24,13 +28,13 @@
 
   <div class="look">
     <p>
-      <a href="#work"> Look what I've done
+      <a href="#work"> Look what I've done so far
         <br>
         <br>
         <i class="arrow down"></i>
     </p>
     </a>
-
+    <a id="work"></a>
   </div>
 
 </div>
@@ -40,7 +44,7 @@
 <div class="secondB">
 
   <h5>
-    <a id="work">My work</a>
+    My work
   </h5>
 
 
@@ -48,7 +52,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="../public/images/pro.jpg">
+          <img class="card-img-top" src="../public/images/img/pro.jpg" />
           <div class="card-body">
             <h5 class="card-title">Snake Game</h5>
             <p class="card-text">This is the 1st project due after 2 weeks coding.</p>
@@ -60,7 +64,7 @@
       <div class="col-sm">
 
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="../public/images/pro2.jpg">
+          <img class="card-img-top" src="../public/images/img/pro2.jpg" />
           <div class="card-body">
             <h5 class="card-title">What the Q</h5>
             <p class="card-text">This is the 2nd project due after 1 month coding.</p>
@@ -71,7 +75,7 @@
       <div class="col-sm">
 
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="public/images/pro3.jpg">
+          <img class="card-img-top" src="public/images/img/pro3.jpg">
           <div class="card-body">
             <h5 class="card-title">Ask Billise</h5>
             <p class="card-text">This is the last project of my 9 weeks coding bootcamp.</p>
@@ -80,38 +84,73 @@
         </div>
       </div>
     </div>
-  </div></div>
+
+  </div>
+  <a id="about"></a>
+</div>
 
 
 
-  <div class="thirdB">
-    <h5>
-      <a id="about">About me</a>
-    </h5>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <img src="../public/images/elise.jpeg" width="100px"> </div>
+<div class="thirdB">
+  <h5>
+    About me
+  </h5>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
 
+        <h5>Currently looking for a job</h5>
+        <p>I wish to work as a
+          <b>web developer</B> because it’s a dynamic and innovative position where I can improve myself day after day.
+          <br>I need a job that fits me, where I can grow every day. It has to be stimulating, challenging and exciting so I
+          will never get bored. When I dive into a new task, I’m entirely in and nothing can stop me !
+          <br>
+          <br>I used to work in event planning for a Parisian agency for 3 years. Mostly organizing corporate events such as
+          meetings from 10 to 1000 people. If you’ve ever been to a seminar, then you know that it’s often connected to a
+          huge party and/or a super fun incentive activity generally in beautiful venues and gorgeous destinations (this
+          part was -obviously- the best of the job!)
 
-
-        <div class="col-sm">
-          <h5>Currently looking for a job</h5>
-          <p>I wish to work as a <b>web developer</B> because it’s a dynamic and innovative position where I can improve myself day
-            after day. 
-            <br>I need a job that fits me, where I can grow every day. It has to be stimulating, challenging and exciting
-            so I will never get bored. 
-            When I dive into a new task, I’m entirely in and nothing can stop me ! 
-            <br>
-            <br>I used to work in event planning for a Parisian agency for 3 years. Mostly organizing corporate events such as meetings from
-            10 to 1000 people. If you’ve ever been to a seminar, then you know that it’s often connected to a huge party
-            and/or a super fun incentive activity generally in beautiful venues and gorgeous destinations (this part was
-            -obviously- the best of the job!) 
-            
-            <div class="quo"><h5>Above all : creativity, innovation, originality and fun are the values I look for in a job</h5></div>
-           <div class="centerbtn"> <a href="/resume"><button class="btn btn-success">Find my resume</button> </a><a href="mailto:elise.griset@gmail.com"><button class="btn btn-success">Contact me</button></a></div>
-          </p>
+          <p>Above all : creativity, innovation, originality and fun are the values I look for in a job.</p>
+        </p>
+        <div class="centerbtn">
+          <a href="/resume">
+            <button class="btn btn-success">Find my resume</button>
+          </a>
+          <a href="mailto:elise.griset@gmail.com">
+            <button class="btn btn-success">Contact me</button>
+          </a>
         </div>
+      </div>
+      <div class="col-sm">
+        <img src="public/images/img/elise" alt="bla" /> </div>
+    </div>
+  </div>
+  <a id="skills"></a>
+</div>
+
+
+
+<div class="fourthB">
+  <h5>
+    My technical skills
+  </h5>
+  <br>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h5>Languages</h5>
+        <p>HTML5, CSS3, JavaScript (ES5, ES6), TypeScript
+        </p>
+      </div>
+      <div class="col-sm">
+        <h5>Libraries</h5>
+        <p>jQuery, MongoDB, Mongoose, APIs, Heroku, Cloudinary, GitHub, Bootstrap, Bulma
+        </p>
+      </div>
+      <div class="col-sm">
+        <h5>Frameworks</h5>
+        <p>Express.js, Angular 4, Node.js</p>
       </div>
     </div>
   </div>
