--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,6 @@ a {
   text-decoration: none;
   border-radius: 3px; }
 
-.active {
-  background-color: white;
-  color: black; }
-
 a:hover {
   background-color: white;
   color: black;
@@ -54,9 +50,9 @@ a:hover {
 
 .firstB {
   background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/fabian-grohs-616504-unsplash.jpg");
-  background-size: 100%;
   background-repeat: no-repeat;
-  height: 90vh; }
+  background-size: cover;
+  height: 400%; }
 
 .look {
   font-size: 14px;
@@ -66,7 +62,7 @@ a:hover {
   transition: transform .2s; }
 
 .look p:hover {
-  transform: scale(1.2); }
+  transform: scale(1.6); }
 
 i {
   border: solid white;
@@ -86,11 +82,15 @@ i {
   height: 50vh;
   padding-left: 10vh;
   padding-top: 10vh;
-  background-color: #ffcc99; }
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/joao-paulo-pereira-645791-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white; }
 
 .card {
   position: initial;
-  background: transparent; }
+  background: transparent;
+  border: 1px solid white; }
 
 .col-sm {
   position: initial; }
@@ -107,19 +107,35 @@ i {
   background-color: plum; }
 
 .thirdB {
-  height: 50vh;
+  height: 70vh;
   padding-left: 10vh;
   padding-top: 10vh;
+  background: linear-gradient(rgba(65, 219, 240, 0.2) 100%, rgba(65, 219, 240, 0.2) 100%), url("../images/matthew-kane-146076-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
   text-align: justify; }
-
-.thirdB a:hover {
-  background: transparent; }
 
 .thirdB .btn-success {
   display: inline-block;
   margin: 5vh 5vh; }
 
+.thirdB a:hover {
+  background-color: transparent; }
+
 .centerbtn {
   text-align: center; }
+
+.fourthB {
+  height: 35vh;
+  padding-left: 10vh;
+  padding-top: 10vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/mateo-mood-604691-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white; }
+
+h5 {
+  letter-spacing: 3px; }
 
 /*# sourceMappingURL=style.css.map */
