--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,12 @@ a:hover {
   text-transform: uppercase;
   font-weight: 500;
   letter-spacing: 3px;
-  margin-top: 15px; }
+  margin-top: 15px;
+  z-index: 9; }
+
+.icon {
+  display: flex;
+  padding-left: 90%; }
 
 .lkdn {
   background-image: url(../images/Linkedin.png);
@@ -38,7 +43,17 @@ a:hover {
   height: 33px;
   transition: transform .2s; }
 
+.gith {
+  background-image: url(../images/git.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 33px;
+  transition: transform .2s; }
+
 .lkdn:hover {
+  transform: scale(1.2); }
+
+.gith:hover {
   transform: scale(1.2); }
 
 .quote {
@@ -79,13 +94,17 @@ i {
   -webkit-transform: rotate(45deg); }
 
 .secondB {
-  height: 50vh;
+  height: 100%;
   padding-left: 10vh;
   padding-top: 10vh;
+  padding-bottom: 10vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/joao-paulo-pereira-645791-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white; }
+
+.elise {
+  text-align-last: center; }
 
 .card {
   position: initial;
@@ -107,7 +126,7 @@ i {
   background-color: plum; }
 
 .thirdB {
-  height: 70vh;
+  height: 170%;
   padding-left: 10vh;
   padding-top: 10vh;
   background: linear-gradient(rgba(65, 219, 240, 0.2) 100%, rgba(65, 219, 240, 0.2) 100%), url("../images/matthew-kane-146076-unsplash.jpg");
@@ -127,15 +146,55 @@ i {
   text-align: center; }
 
 .fourthB {
-  height: 35vh;
+  height: 150%;
   padding-left: 10vh;
   padding-top: 10vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/mateo-mood-604691-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/mateo-mood-604691-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white; }
 
 h5 {
   letter-spacing: 3px; }
+
+.resume a:hover {
+  color: black;
+  background-color: white; }
+
+.resume a {
+  color: black;
+  text-align: initial; }
+
+.resume {
+  text-align: center;
+  background-image: url("../images/rawpixel-577482-unsplash.jpg"); }
+
+.containers {
+  position: relative;
+  width: 18rem; }
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  width: 18rem;
+  height: 0;
+  transition: .5s ease; }
+
+.containers:hover .overlay {
+  height: 100%; }
+
+.text {
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
