--- a/views/resume.hbs
+++ b/views/resume.hbs
@@ -1,1 +1,9 @@
-<img src="../public/images/pro3.jpg">
+<div class="resume">
+
+  <a href="/">
+    <h5>Back to the Portfolio </h5>
+  </a>
+
+  <img src="images/1.png">
+  <img src="images/2.png">
+</div>
