--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,8 @@ a:hover {
   background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/fabian-grohs-616504-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400%; }
+  height: 400%;
+  width: 100%; }
 
 .look {
   font-size: 14px;
@@ -101,6 +102,7 @@ i {
   background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/joao-paulo-pereira-645791-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
   color: white; }
 
 .elise {
@@ -133,7 +135,8 @@ i {
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  text-align: justify; }
+  text-align: justify;
+  width: 100%; }
 
 .thirdB .btn-success {
   display: inline-block;
@@ -152,7 +155,8 @@ i {
   background: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/mateo-mood-604691-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  color: white; }
+  color: white;
+  width: 100%; }
 
 h5 {
   letter-spacing: 3px; }
