--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -87,6 +87,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   height: 400%;
+  width: 100%;
 }
 
 .look {
@@ -131,6 +132,8 @@ i {
     url("../images/joao-paulo-pereira-645791-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+
   color: white;
 }
 
@@ -174,6 +177,7 @@ i {
   background-size: cover;
   color: white;
   text-align: justify;
+  width: 100%;
 }
 
 .thirdB .btn-success {
@@ -200,6 +204,7 @@ i {
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
+  width: 100%;
 }
 
 h5 {
