--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,53 +1,49 @@
-<div class="my-paroller" data-paroller-factor="-0.1" data-paroller-type="background" data-paroller-direction="vertical">
-
-  <div id="my-element" class="firstB">
-    <div class="navigation">
-      <ul class="nav">
+<nav id="my-element" class="firstB">
+  <div class="navigation">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">hey</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#work">My Work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#skills">Skills</a>
+      </li>
+      <div class="icon">
         <li class="nav-item">
-          <a class="nav-link" href="#">hey</a>
+          <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank">
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#work">My Work</a>
+          <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank">
+          </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
-        </li>
-        <div class="icon">
-          <li class="nav-item">
-            <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank">
-            </a>
-          </li>
-        </div>
+      </div>
 
-      </ul>
-    </div>
-
-    <div class="quote">
-      <p>Hey ! I'm Elise
-        <br>I build websites</p>
-    </div>
-
-    <div class="look">
-      <p>
-        <a href="#work"> Look what I've done so far
-          <br>
-          <br>
-          <i class="arrow down"></i>
-      </p>
-      </a>
-      <a id="work"></a>
-    </div>
-
+    </ul>
   </div>
-</div>
 
+
+  <div class="quote">
+    <p>Hey ! I'm Elise
+      <br>I build websites</p>
+  </div>
+
+  <div class="look">
+    <p>
+      <a href="#work"> Look what I've done so far
+        <br>
+        <br>
+        <i class="arrow down"></i>
+    </p>
+    </a>
+    <a id="work"></a>
+  </div>
+</nav>
 
 
 <div class="secondB">
