--- a/views/index.hbs
+++ b/views/index.hbs
@@ -122,17 +122,20 @@
       <div class="col-sm">
 
         <h5>Currently looking for a job</h5>
-        
+
         <p>I would like to work as a
           <b>web developer</B> because it’s a dynamic and innovative position where I can improve myself day after day.
           <br>I need a job that fits me, where I can grow every day. I enjoy stimulating, challenging and exciting environments.
-        When I dive into a new task, I’m entirely involved and nothing can stop me !
+          When I dive into a new task, I’m entirely involved and nothing can stop me !
           <br>
-          <br>I worked for 3 years in event planning for a Parisian agency. If you’ve ever been to a seminar, then you know that it’s often connected to a huge party and/or a super fun incentive activity, generally in beautiful venues and gorgeous destinations (this part was -obviously- the best of the job!) I organized many of these special experiences, including corporate events and meetings from 10 to 1000 people.
+          <br>I worked for 3 years in event planning for a Parisian agency. If you’ve ever been to a seminar, then you know that
+          it’s often connected to a huge party and/or a super fun incentive activity, generally in beautiful venues and gorgeous
+          destinations (this part was -obviously- the best of the job!) I organized many of these special experiences, including
+          corporate events and meetings from 10 to 1000 people.
 
 
           <p>Above all : creativity, innovation, originality and fun are the values I look for — and will bring — to a job
-</p>
+          </p>
         </p>
         <div class="centerbtn">
           <a href="/resume">
@@ -188,3 +191,11 @@
     </div>
   </div>
 </div>
+
+<footer>
+  <div class="footer">
+
+    <p>© Elise Griset</p>
+  </div>
+
+</footer>
