--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,16 +2,16 @@
   <div class="navigation">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">hey</a>
+        <a class="nav-link js-scrollTo" href="#">hey</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#work">My Work</a>
+        <a class="nav-link js-scrollTo" href="#work">My Work</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link js-scrollTo" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link js-scrollTo" href="#skills">Skills</a>
       </li>
       <div class="icon">
         <li class="nav-item">
@@ -35,7 +35,7 @@
 
   <div class="look">
     <p>
-      <a href="#work"> Look what I've done so far
+      <a class="js-scrollTo" href="#work"> Look what I've done so far
         <br>
         <br>
         <i class="arrow down"></i>
@@ -63,6 +63,9 @@
               <p>Game</p>
               <p>Canvas, JS, jQuery</p>
               <a href="https://elisegriset92.github.io/ironhack-project1/" target="_blank" class="btn btn-success">See website</a>
+              <br>
+              <a href="/about-snake" class="btn btn-success">See more</a>
+
             </div>
           </div>
           <div class="card-body">
