--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,8 +63,8 @@
               <p>Game</p>
               <p>Canvas, JS, jQuery</p>
               <a href="https://elisegriset92.github.io/ironhack-project1/" target="_blank" class="btn btn-success">See website</a>
-              <br>
-              <a href="/about-snake" class="btn btn-success">See more</a>
+              <br> {{!--
+              <a href="/about-snake" class="btn btn-success">See more</a> --}}
 
             </div>
           </div>
